Fix alignment of custom sound uploader

--- a/res/css/views/settings/notifications/_NotificationsTab.scss
+++ b/res/css/views/settings/notifications/_NotificationsTab.scss
@@ -192,6 +192,10 @@ $textareaWidth: 400px;
         vertical-align: middle;
     }
 
+    .mx_NotificationsTab_CustomSoundUpload {
+        padding: 6px 10px;
+    }
+
     .mx_NotificationsTab_CustomSoundTile {
         border-radius: 4px;
         padding: 6px 10px;
